--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,16 @@
   .modal-content {
     padding: 50px 15px;
   }
+  h1, .h1{
+    font-size: 24px;
+  }
+  h3, .h3{
+    font-size:16px;
+  }
+  #info > div > div > div:nth-child(1) > img{
+    max-height: 48px;
+    margin-bottom: 16px;
+  }
 }
 
 @media only screen and (min-width: 991px) {
